--- a/index.html
+++ b/index.html
@@ -1,37 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Time Application | Tushar</title>
-
-
+    <link rel="shortcut icon" href="./img/time-tracking.svg" />
 
     <!-- FontAwesome -->
-    <script src="https://kit.fontawesome.com/95a5e83b85.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/95a5e83b85.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-</head>
-
-<body>
-    <div class="card">
+  <body>
+    
+      <header class="title">
+        <h1 class="title-name">Stopwatch</h1>
+      </header>
+      <div class="wrapper">
+        <div class="info">
+          Hi I am a Stopwatch
+        </div>
+      <div class="card">
         <div id="time">
-            <p id="timer">00:00:00</p>
+          <p id="timer">
+            00<span id="hour">H </span>00<span id="min">M </span
+            ><span id="sec">00<span>S </span></span>
+          </p>
         </div>
         <div class="buttons">
-            <div id="startStop" class="btn start" onclick="startStop()"><i class="fas fa-play fa-2x"></i></div>
-            <!-- <div id="btn" class="stop" onclick="stop()"><i class="fas fa-pause"></i></div> -->
-            <div id="btn" class="reset btn" onclick="reset()"><i class="fas fa-redo fa-2x"></i></div>
-    
+          <div id="startStop" class="btn start" onclick="startStop()">
+            <i class="fas fa-play fa-4x"></i>
+          </div>
+          <div id="reset" class="reset btn" onclick="reset()">
+            <i class="fas fa-redo fa-4x"></i>
+          </div>
         </div>
+      </div>
     </div>
 
     <!-- JavaScript -->
     <script type="text/javascript" src="./js/script.js"></script>
 
     <!-- Style -->
-    <link rel="stylesheet" href="./css/style.css">
-</body>
-
+    <link rel="stylesheet" href="./css/style.css" />
+  </body>
 </html>
