--- a/index.html
+++ b/index.html
@@ -15,13 +15,9 @@
   </head>
 
   <body>
-    
-      <header class="title">
-        <h1 class="title-name">Stopwatch</h1>
-      </header>
-      <div class="wrapper">
+    <div class="wrapper">
         <div class="info">
-          Hi I am a Stopwatch
+         <h1>Stopwatch App</h1>
         </div>
       <div class="card">
         <div id="time">
@@ -40,7 +36,6 @@
         </div>
       </div>
     </div>
-
     <!-- JavaScript -->
     <script type="text/javascript" src="./js/script.js"></script>
 
